adding createBid functionatliy to UI
